# WasmOS

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  package.json
boot/grub/: grub.cfg
buildroot/board/newos/grub/: grub.cfg
buildroot/board/newos/rootfs-overlay/etc/init.d/: S99newos
crates/wasmos-host/: Cargo.toml
crates/wasmos-host/src/: api.rs  gui.rs  main.rs  net.rs  runtime.rs  scheduler.rs  shell.rs  vfs.rs
docs/: abi.md  architecture.md  iso-packaging.md  packages.md
guest_abi/: Cargo.toml
guest_abi/src/: lib.rs
guest_programs/: Cargo.toml  README.md
guest_programs/src/: common.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  main.rs
runtime/src/gui/: mod.rs
runtime/src/net/: mod.rs
runtime/src/scheduler/: mod.rs
runtime/src/shell/: mod.rs
runtime/src/vfs/: mod.rs
runtime/src/wasm/: mod.rs
scripts/: build-iso.sh  dev-serve.sh  kiosk-chromium.sh  package-iso.sh  run-qemu.sh  start-backend.sh  start-webos.sh
server/: index.js
src/: lib.rs  main.rs  os_error.rs
src/gui/: mod.rs
src/host/: mod.rs
src/network/: mod.rs
src/program_api/: mod.rs
src/runtime/: mod.rs
src/scheduler/: mod.rs
src/shell/: mod.rs
src/vfs/: mod.rs
tests/: preemptive_quantum.rs  system_api_e2e.rs
tools/: pkg_registry_server.js
web/: index.html
web/apps/calculator/: index.html  manifest.json
web/apps/file-manager/: index.html  manifest.json
web/apps/notes/: index.html  manifest.json
web/apps/settings/: index.html  manifest.json
web/desktop/: app-sdk.js  desktop.css  desktop.js
webos/apps/calculator/: index.html
webos/apps/file-manager/: index.html
webos/apps/notes/: index.html
webos/apps/settings/: index.html
webos/desktop/: desktop.js  index.html  styles.css
