[package]
name = "wasmos"
version = "0.1.0"
edition = "2024"

[features]
default = []
desktop-gui = ["dep:minifb"]

[dependencies]
anyhow = "1.0"
bytes = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.44", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
minifb = { version = "0.27", optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
url = { version = "2.5", features = ["serde"] }
wasmtime = "31.0"
wasmtime-wasi = "31.0"

[dev-dependencies]
wat = "1.227"
