[package]
name = "wasmos-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "net", "io-util"] }
tracing = "0.1"
url = "2"
wasmtime = "22"
wasmtime-wasi = "22"
