[package]
name = "wasmos-host"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["ws", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
wasmtime = { version = "38", features = ["async", "component-model", "cranelift", "wat"] }
wasmtime-wasi = "38"
bytes = "1"
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"
camino = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tower-http = { version = "0.6", features = ["fs"] }
